# Aiulink

./: README.md
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/services/: data_import.py  orchestrator.py  responsibility.py  risk_engine.py  skill_builder.py
backend/tests/: test_data_import.py  test_responsibility.py  test_skill_builder.py
docs/: architecture.md  tech-route.md
